force-app/main/default/objects/Account/fields/ABS_Traffic_Light__c.field-meta.xml
<CustomField>
    <fullName>ABS_Traffic_Light__c</fullName>
    <label>ABS Traffic Light</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <label>Red 🔴</label>
            </value>
            <value>
                <fullName>Amber</fullName>
                <label>Amber 🟠</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green 🟢</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>