force-app/main/default/objects/Account/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>CASE(RecordType.Name , &quot;Local Authority&quot;, &quot;LA&quot;, &quot;Consortium&quot;, &quot;CON&quot;,&quot;Housing Association&quot;, &quot;HA&quot;, &quot;ACC&quot;)  + &quot;-&quot; +  Account_Autonumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>