force-app/main/default/objects/Account/fields/Consortium_Partner_Id_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Partner_Id_If_Applicable__c</fullName>
    <label>Consortium Partner Id (If Applicable)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>