force-app/main/default/objects/Account/fields/digitalmodus__Company_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>digitalmodus__Company_Registration_Number__c</fullName>
    <label>Company Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>