force-app/main/default/objects/Account/fields/Fraud_Error__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Error__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraud &amp; Error</label>
    <referenceTo>Fraud_Error__c</referenceTo>
    <relationshipLabel>Installer/Supplier Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>