force-app/main/default/objects/Account/fields/Installer_been_issued_a_PN__c.field-meta.xml
<CustomField>
    <fullName>Installer_been_issued_a_PN__c</fullName>
    <inlineHelpText>Select whether the installer has been issued with a Privacy Notice.</inlineHelpText>
    <label>Installer been issued a PN?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>