force-app/main/default/objects/Account/fields/Trustmark_Business_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Trustmark_Business_License_Number__c</fullName>
    <label>Trustmark Business License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>