force-app/main/default/objects/Account/recordTypes/Business_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Business_Accounts</fullName>
    <active>true</active>
    <label>Business Accounts</label>
</RecordType>