force-app/main/default/objects/Account/recordTypes/Housing_Association.recordType-meta.xml
<RecordType>
    <fullName>Housing_Association</fullName>
    <active>true</active>
    <label>Housing Association</label>
</RecordType>