force-app/main/default/objects/Account/listViews/Consortium_s.listView-meta.xml
<ListView>
    <fullName>Consortium_s</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Consortium_Partner_Id_If_Applicable__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ABS_Traffic_Light__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Consortium</value>
    </filters>
    <label>Consortium&apos;s</label>
</ListView>