force-app/main/default/objects/Account/listViews/GR_Accounts.listView-meta.xml
<ListView>
    <fullName>GR_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ABS_Traffic_Light__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Grant Recipient</value>
    </filters>
    <label>GR Accounts</label>
</ListView>