force-app/main/default/objects/Account/listViews/Grant_Recipients_by_Region.listView-meta.xml
<ListView>
    <fullName>Grant_Recipients_by_Region</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PARENT_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Grant Recipient</value>
    </filters>
    <label>Grant Recipients by Region</label>
</ListView>