force-app/main/default/objects/Account/listViews/PublicSector__AllAccounts.listView-meta.xml
<ListView>
    <fullName>PublicSector__AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PARENT_NAME</columns>
    <columns>Consortium_Partner_Id_If_Applicable__c</columns>
    <columns>ABS_Traffic_Light__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>